--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
           <h2 class="subtitle1">Preparation time</h2>
 
           <ul>
-            <li>Total: Approximately 10 minutes</li>
-            <li>Preparation: 5 minutes</li>
-            <li>Cooking: 5 minutes</li>
+            <li><strong>Total:</strong> Approximately 10 minutes</li>
+            <li><strong>Preparation:</strong> 5 minutes</li>
+            <li><strong>Cooking:</strong> 5 minutes</li>
           </ul>
         </article>
 
-        <article>
+        <article class="ingredients">
           <h2 class="subtitle">Ingredients</h2>
           <ul>
             <li>2-3 large eggs</li>
